tests/aster/x/mochi/rosetta/determine-if-a-string-is-squeezable.error
error[A024]: unknown function substring
  --> /workspace/mochi/tests/rosetta/x/Mochi/determine-if-a-string-is-squeezable.mochi:14:13

 14 |     let c = substring(s, i, i+1)
    |             ^

help:
  Declare substring before use
